[gd_scene load_steps=2 format=3 uid="uid://b5q0mejrmiaam"]

[ext_resource type="Script" path="res://addons/quest_editor/scripts/nodes/reqs/item_req_node.gd" id="1_lrctg"]

[node name="item_req_node" type="GraphNode"]
custom_minimum_size = Vector2(300, 400)
offset_right = 36.0
offset_bottom = 54.0
title = "Item Requirement"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(0, 0, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = true
slot/5/left_type = 3
slot/5/left_color = Color(1, 0, 0, 1)
slot/5/left_icon = null
slot/5/right_enabled = false
slot/5/right_type = 0
slot/5/right_color = Color(1, 1, 1, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = false
slot/6/left_type = 0
slot/6/left_color = Color(1, 1, 1, 1)
slot/6/left_icon = null
slot/6/right_enabled = true
slot/6/right_type = 0
slot/6/right_color = Color(1, 1, 1, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
script = ExtResource("1_lrctg")

[node name="req_id_box" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="req_id_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "ID"

[node name="req_id" type="LineEdit" parent="req_id_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Description
"

[node name="req_desc" type="TextEdit" parent="VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="item_name_Box" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="item_name_Box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Item Name"

[node name="item_name" type="LineEdit" parent="item_name_Box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="amount_box" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="amount_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Amount"

[node name="amount" type="SpinBox" parent="amount_box"]
unique_name_in_owner = true
layout_mode = 2
max_value = 9.22337e+18

[node name="optional" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Optional"

[node name="rewards" type="Label" parent="."]
layout_mode = 2
text = "Rewards"

[node name="next_stage" type="Label" parent="."]
layout_mode = 2
text = "Next Stage
"
